<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context="a1point3acres.com.example.android.a1point3acres.SignInActivity">

    <TextView
        android:id="@+id/username_sign_in"
        style="@style/TextStyle"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/username_input_sign_in"
        style="@style/ViewStyle"/>

    <TextView
        android:id="@+id/password_sign_in"
        style="@style/TextStyle"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/password_input_sign_in"
        style="@style/PasswordStyle"/>

    <TextView
        android:id="@+id/security_question_sign_in"
        style="@style/TextStyle"
        android:text="@string/security_questions"/>

    <Spinner
        android:id="@+id/spinner_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:layout_marginBottom="32dp"
        android:spinnerMode="dropdown"/>

    <TextView
        android:id="@+id/security_answer_sign_in"
        style="@style/TextStyle"
        android:text="@string/security_questions_answer"/>

    <EditText
        android:id="@+id/answer_sign_in"
        style="@style/ViewStyle"/>

    <Button
        android:id="@+id/confirm_sign_in"
        style="@style/ViewStyle"
        android:textSize="24sp"
        android:text="@string/sign_in"
        android:onClick="tryToLogIn"/>


</LinearLayout>
